examples/error/decl-in-main-block.skald
var
	a <- 2.
rav

main
	a int.
niam
